// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Assert with source code > case 1`] = `
"/* Assert */ /* node:coverage ignore next */ // optimized
if (!(expr + expr2)) throw new Assert.Error("expr + expr2");
// unoptimized
Assert(expr, "expr") || true;"
`;

exports[`Assert with source code > case source map 1`] = `
"{
  "version": 3,
  "names": [
    "Assert"
  ],
  "sources": [
    "unknown"
  ],
  "sourcesContent": [
    "\\n    // optimized\\n    Assert(expr + expr2);\\n    // unoptimized\\n    Assert(expr) || true;\\n  "
  ],
  "mappings": "AAEI,6CADA;AACAA,EAAA,CAAAA,GAAO,IAAI,GAAG,KAAK,CAAb,EAANA,KAAA,CAAAA,GAAA,OAAM,CAANA,KAAM,CAANA,cAAK,CAAC;AACN;AACA,MAAM,CAAC,IAAI,SAAC,IAAI,IAAI",
  "ignoreList": []
}"
`;

exports[`Completion optimization > case 1`] = `
"import { AbruptCompletion, Completion, Assert } from "#self";
let value1 = _;
// normal
const value2 = {
  __proto__: NormalCompletion.prototype,
  Value: {
    Value: 1
  }
};
// nested
/* ReturnIfAbrupt */if (value1 instanceof Completion) {
  if (value1 instanceof AbruptCompletion) return value1;
  value1 = value1.Value;
}
const value3 = {
  __proto__: NormalCompletion.prototype,
  Value: value1
};"
`;

exports[`Completion optimization > case source map 1`] = `
"{
  "version": 3,
  "names": [
    "NormalCompletion",
    "Q"
  ],
  "sources": [
    "unknown"
  ],
  "sourcesContent": [
    "\\n    const value1 = _;\\n    // normal\\n    const value2 = NormalCompletion({ Value: 1 });\\n    // nested\\n    const value3 = NormalCompletion(Q(value1));\\n  "
  ],
  "mappings": ";AACI,IAAM,MAAM,GAAG,CAAC;AAChB;AACA,MAAM,MAAM,GAAGA;EAAAA,SAAgB,EAAhB,gBAAgB,CAAhBA,SAAgB;EAAhBA,KAAgB,EAAC;IAAE,KAAK,EAAE;EAAE;AAAb,CAAe;AAC7C;AACgC,oBAAAC,EAAA,CAAAA,CAAE,MAAM,YAARA,UAAC,EAADA;EAAAA,EAAA,CAAAA,CAAE,MAAM,YAARA,gBAAC,EAADA,MAAA,CAAE,MAAM;EAAN,MAAM,GAAN,MAAM,CAARA,KAAC;AAAD;AAAhC,MAAM,MAAM,GAAGD;EAAAA,SAAgB,EAAhB,gBAAgB,CAAhBA,SAAgB;EAAhBA,KAAgB,EAAG;AAAJ,CAAY",
  "ignoreList": []
}"
`;

exports[`Struct optimization > case 1`] = `
"const val = {
  __proto__: AsyncGeneratorRequestRecord.prototype,
  Value: 1
};"
`;

exports[`Struct optimization > case source map 1`] = `
"{
  "version": 3,
  "names": [],
  "sources": [
    "unknown"
  ],
  "sourcesContent": [
    "\\n    const val = AsyncGeneratorRequestRecord({ Value: 1 });\\n  "
  ],
  "mappings": "AACI,MAAM,GAAG;EAAA;EAAiC,KAAK,EAAE;AAAC,CAAG",
  "ignoreList": []
}"
`;

exports[`function.section > case 1`] = `
"/** https://tc39.es/ecma262/#sec-test */
function Test() {}
Test.section = 'https://tc39.es/ecma262/#sec-test';

/** https://tc39.es/ecma262/#sec-test */
export function Test2() {}
Test2.section = 'https://tc39.es/ecma262/#sec-test';

/** https://tc39.es/ecma262/#sec-test */
const Test5 = function () {};
Test5.section = 'https://tc39.es/ecma262/#sec-test';

/** https://tc39.es/ecma262/#sec-test */
const Test6 = () => {};
Test6.section = 'https://tc39.es/ecma262/#sec-test';

// Not supported yet
/** https://tc39.es/ecma262/#sec-test */
export const Test3 = function () {};
/** https://tc39.es/ecma262/#sec-test */
export const Test4 = () => {};"
`;

exports[`function.section > case source map 1`] = `
"{
  "version": 3,
  "names": [],
  "sources": [
    "unknown"
  ],
  "sourcesContent": [
    "\\n    /** https://tc39.es/ecma262/#sec-test */\\n    function Test() {}\\n    /** https://tc39.es/ecma262/#sec-test */\\n    export function Test2() {}\\n    /** https://tc39.es/ecma262/#sec-test */\\n    const Test5 = function () {}\\n    /** https://tc39.es/ecma262/#sec-test */\\n    const Test6 = () => {}\\n\\n    // Not supported yet\\n    /** https://tc39.es/ecma262/#sec-test */\\n    export const Test3 = function () {}\\n    /** https://tc39.es/ecma262/#sec-test */\\n    export const Test4 = () => {}\\n  "
  ],
  "mappings": "AACI;AACA,SAAS,IAAI,GAAG,CAAC;AADjB,IAAwC,CAAxC,OAAwC,GAAxC,mCAAwC;;AAExC;AACA,OAAO,SAAS,KAAK,GAAG,CAAC;AADzB,KAAwC,CAAxC,OAAwC,GAAxC,mCAAwC;;AAExC;AACA,MAAM,KAAK,GAAG,YAAY,CAAC,CAAC;AAD5B,KAAwC,CAAxC,OAAwC,GAAxC,mCAAwC;;AAExC;AACA,MAAM,KAAK,GAAG,MAAM,CAAC,CAAC;AADtB,KAAwC,CAAxC,OAAwC,GAAxC,mCAAwC;;AAGxC;AACA;AACA,OAAO,MAAM,KAAK,GAAG,YAAY,CAAC,CAAC;AACnC;AACA,OAAO,MAAM,KAAK,GAAG,MAAM,CAAC,CAAC",
  "ignoreList": []
}"
`;

exports[`transform OutOfRange > case 1`] = `
"function f() {
  /* node:coverage ignore next */
  throw OutOfRange.exhaustive('message');
}
switch (key) {
  case value:
    break;
  /* node:coverage ignore next */default:
    /* node:coverage ignore next */
    throw OutOfRange.nonExhaustive(key);
}"
`;

exports[`transform OutOfRange > case source map 1`] = `
"{
  "version": 3,
  "names": [],
  "sources": [
    "unknown"
  ],
  "sourcesContent": [
    "\\n    function f() { throw OutOfRange.exhaustive('message'); }\\n    switch (key) {\\n      case value:\\n        break;\\n      default:\\n        throw OutOfRange.nonExhaustive(key);\\n    }\\n  "
  ],
  "mappings": "AACI,SAAS,CAAC,GAAG;EAAA;EAAE,MAAM,UAAU,CAAC,UAAU,CAAC,SAAS,CAAC;AAAE;AACvD,QAAQ,GAAG;EACT,KAAK,KAAK;IACR;EAAM,+BACR;IAAA;IACE,MAAM,UAAU,CAAC,aAAa,CAAC,GAAG,CAAC;AACvC",
  "ignoreList": []
}"
`;

exports[`transform Q() correctly > complex 1`] = `
"import { AbruptCompletion, Completion, Assert } from "#self";
let value;
/* ReturnIfAbrupt */let _completion = Call(value);
/* ReturnIfAbrupt */if (_completion instanceof Completion) {
  if (_completion instanceof AbruptCompletion) return _completion;
  _completion = _completion.Value;
}
/* ReturnIfAbrupt */let _completion2 = Call(value);
/* ReturnIfAbrupt */if (_completion2 instanceof Completion) {
  if (_completion2 instanceof AbruptCompletion) return _completion2;
  _completion2 = _completion2.Value;
}
const completion = Apply(_completion, _completion2);"
`;

exports[`transform Q() correctly > complex source map 1`] = `
"{
  "version": 3,
  "names": [
    "Q"
  ],
  "sources": [
    "unknown"
  ],
  "sourcesContent": [
    "\\n    let value;\\n    const completion = Apply(Q(Call(value)), Q(Call(value)));\\n  "
  ],
  "mappings": ";AACI,IAAI,KAAK;AACgB,oBAAAA,GAAA,CAAAA,WAAC,GAAC,IAAI,CAAC,KAAK,CAAX;AAAD,oBAAAA,EAAA,CAAAA,YAAC,YAADA,UAAC,EAADA;EAAAA,EAAA,CAAAA,YAAC,YAADA,gBAAC,EAADA,MAAA,CAAAA,WAAC;EAADA,WAAC,GAADA,WAAC,CAADA,KAAC;AAAD;AAAgB,oBAAAA,GAAA,CAAAA,YAAC,GAAC,IAAI,CAAC,KAAK,CAAX;AAAD,oBAAAA,EAAA,CAAAA,aAAC,YAADA,UAAC,EAADA;EAAAA,EAAA,CAAAA,aAAC,YAADA,gBAAC,EAADA,MAAA,CAAAA,YAAC;EAADA,YAAC,GAADA,YAAC,CAADA,KAAC;AAAD;AAAzC,MAAM,UAAU,GAAG,KAAK,CAACA,WAAC,EAAeA,YAAc,CAAC",
  "ignoreList": []
}"
`;

exports[`transform Q() correctly > return 1`] = `
"function f() {
  let value;
  return value;
}"
`;

exports[`transform Q() correctly > return arrow 1`] = `
"let value;
const f = () => value;"
`;

exports[`transform Q() correctly > return arrow source map 1`] = `
"{
  "version": 3,
  "names": [],
  "sources": [
    "unknown"
  ],
  "sourcesContent": [
    "\\n    let value;\\n    const f = () => Q(value);\\n  "
  ],
  "mappings": "AACI,IAAI,KAAK;AACT,MAAM,CAAC,GAAG,MAAQ,KAAM",
  "ignoreList": []
}"
`;

exports[`transform Q() correctly > return source map 1`] = `
"{
  "version": 3,
  "names": [],
  "sources": [
    "unknown"
  ],
  "sourcesContent": [
    "\\n    function f() {\\n      let value;\\n      return Q(value);\\n    }\\n  "
  ],
  "mappings": "AACI,SAAS,CAAC,GAAG;EACX,IAAI,KAAK;EACT,OAAS,KAAK;AAChB",
  "ignoreList": []
}"
`;

exports[`transform Q() correctly > statement 1`] = `
"import { AbruptCompletion, Completion, Assert } from "#self";
let value;
/* ReturnIfAbrupt */if (value instanceof Completion) {
  if (value instanceof AbruptCompletion) return value;
  value = value.Value;
}"
`;

exports[`transform Q() correctly > statement source map 1`] = `
"{
  "version": 3,
  "names": [
    "Q"
  ],
  "sources": [
    "unknown"
  ],
  "sourcesContent": [
    "\\n    let value;\\n    Q(value);\\n  "
  ],
  "mappings": ";AACI,IAAI,KAAK;AACT,oBAAAA,EAAA,CAAAA,CAAE,KAAK,YAAPA,UAAC,EAADA;EAAAA,EAAA,CAAAA,CAAE,KAAK,YAAPA,gBAAC,EAADA,MAAA,CAAE,KAAK;EAAL,KAAK,GAAL,KAAK,CAAPA,KAAC;AAAD",
  "ignoreList": []
}"
`;

exports[`transform Q() correctly > value 1`] = `
"import { AbruptCompletion, Completion, Assert } from "#self";
let value;
/* ReturnIfAbrupt */if (value instanceof Completion) {
  if (value instanceof AbruptCompletion) return value;
  value = value.Value;
}
const x = value;"
`;

exports[`transform Q() correctly > value source map 1`] = `
"{
  "version": 3,
  "names": [
    "Q"
  ],
  "sources": [
    "unknown"
  ],
  "sourcesContent": [
    "\\n    let value;\\n    const x = Q(value);\\n  "
  ],
  "mappings": ";AACI,IAAI,KAAK;AACC,oBAAAA,EAAA,CAAAA,CAAE,KAAK,YAAPA,UAAC,EAADA;EAAAA,EAAA,CAAAA,CAAE,KAAK,YAAPA,gBAAC,EAADA,MAAA,CAAE,KAAK;EAAL,KAAK,GAAL,KAAK,CAAPA,KAAC;AAAD;AAAV,MAAM,CAAC,GAAK,KAAM",
  "ignoreList": []
}"
`;

exports[`transform Throw() correctly > case 1`] = `
"import { ThrowCompletion } from "#self";
function f(value) {
  /* Throw */return {
    __proto__: ThrowCompletion.prototype,
    Value: value
  };
}"
`;

exports[`transform Throw() correctly > case source map 1`] = `
"{
  "version": 3,
  "names": [
    "Throw"
  ],
  "sources": [
    "unknown"
  ],
  "sourcesContent": [
    "\\n    function f(value) {\\n      Throw(value);\\n    }\\n  "
  ],
  "mappings": ";AACI,SAAS,CAAC,CAAC,KAAK,EAAE;EAChB,WAAAA,MAAA,CAAAA;IAAAA,SAAK,EAALA,eAAK,CAALA,SAAK;IAALA,KAAK,EAAC;EAAF,CAAC;AACP",
  "ignoreList": []
}"
`;

exports[`transform Throw() correctly > direct return 1`] = `
"import { ThrowCompletion } from "#self";
function f(value) {
  return {
    __proto__: ThrowCompletion.prototype,
    Value: value
  };
}
const f2 = value => ({
  __proto__: ThrowCompletion.prototype,
  Value: value
});"
`;

exports[`transform Throw() correctly > direct return source map 1`] = `
"{
  "version": 3,
  "names": [
    "Throw"
  ],
  "sources": [
    "unknown"
  ],
  "sourcesContent": [
    "\\n    function f(value) {\\n      return Throw(value);\\n    }\\n    const f2 = value => Throw(value);\\n  "
  ],
  "mappings": ";AACI,SAAS,CAAC,CAAC,KAAK,EAAE;EAChB,OAAOA;IAAAA,SAAK,EAALA,eAAK,CAALA,SAAK;IAALA,KAAK,EAAC;EAAF,CAAC;AACd;AACA,MAAM,EAAE,GAAG,KAAK,KAAIA;EAAAA,SAAK,EAALA,eAAK,CAALA,SAAK;EAALA,KAAK,EAAC;AAAF,CAAC,CAAO",
  "ignoreList": []
}"
`;

exports[`transform X() correctly > complex 1`] = `
"import { Assert, Completion, AbruptCompletion, skipDebugger } from "#self";
let value;
/* X */let _temp = Call(value);
/* node:coverage ignore next */if (_temp && typeof _temp === 'object' && 'next' in _temp) _temp = skipDebugger(_temp);
/* node:coverage ignore next */if (_temp instanceof Completion) {
  /* node:coverage ignore next */if (_temp instanceof AbruptCompletion) throw new Assert.Error("! Call(value) returned an abrupt completion", {
    cause: _temp
  });
  _temp = _temp.Value;
}
Apply(_temp);"
`;

exports[`transform X() correctly > complex source map 1`] = `
"{
  "version": 3,
  "names": [
    "X"
  ],
  "sources": [
    "unknown"
  ],
  "sourcesContent": [
    "\\n    let value;\\n    Apply(X(Call(value)));\\n  "
  ],
  "mappings": ";AACI,IAAI,KAAK;AACH,OAAAA,GAAA,CAAAA,KAAC,GAAC,IAAI,CAAC,KAAK,CAAX;AAAD,+BAAAA,EAAA,CAAAA,MAAC,IAADA,MAAA,CAAAA,KAAC,KAADA,QAAC,IAADA,MAAC,IAADA,KAAC,EAADA,KAAC,GAADA,YAAC,CAADA,KAAA,CAAC;AAAD,+BAAAA,EAAA,CAAAA,MAAC,YAADA,UAAC,EAADA;EAAAA,iCAAA,CAAAA,MAAC,YAADA,gBAAC,EAADA,KAAA,CAAAA,GAAA,CAAAA,MAAC,CAADA,KAAC,CAADA,6CAAC,EAADA;IAAAA,KAAC,EAADA;EAAA,EAAC;EAADA,KAAC,GAADA,KAAC,CAADA,KAAC;AAAD;AAAN,KAAK,CAACA,KAAc,CAAC",
  "ignoreList": []
}"
`;

exports[`transform X() correctly > condition 1`] = `
"import { Assert, Completion, AbruptCompletion, skipDebugger } from "#self";
function f() {
  let value;
  if (test) {
    /* X */let _temp = value.compute();
    /* node:coverage ignore next */if (_temp && typeof _temp === 'object' && 'next' in _temp) _temp = skipDebugger(_temp);
    /* node:coverage ignore next */if (_temp instanceof Completion) {
      /* node:coverage ignore next */if (_temp instanceof AbruptCompletion) throw new Assert.Error("! value.compute() returned an abrupt completion", {
        cause: _temp
      });
      _temp = _temp.Value;
    }
    return _temp;
  }
}"
`;

exports[`transform X() correctly > condition source map 1`] = `
"{
  "version": 3,
  "names": [
    "X"
  ],
  "sources": [
    "unknown"
  ],
  "sourcesContent": [
    "\\n    function f() {\\n      let value;\\n      if (test) return X(value.compute());\\n    }\\n  "
  ],
  "mappings": ";AACI,SAAS,CAAC,GAAG;EACX,IAAI,KAAK;EACT,IAAI,IAAI;IAAS,OAAAA,GAAA,CAAAA,KAAC,GAAC,KAAK,CAAC,OAAO,CAAC,CAAf;IAAD,+BAAAA,EAAA,CAAAA,MAAC,IAADA,MAAA,CAAAA,KAAC,KAADA,QAAC,IAADA,MAAC,IAADA,KAAC,EAADA,KAAC,GAADA,YAAC,CAADA,KAAA,CAAC;IAAD,+BAAAA,EAAA,CAAAA,MAAC,YAADA,UAAC,EAADA;MAAAA,iCAAA,CAAAA,MAAC,YAADA,gBAAC,EAADA,KAAA,CAAAA,GAAA,CAAAA,MAAC,CAADA,KAAC,CAADA,iDAAC,EAADA;QAAAA,KAAC,EAADA;MAAA,EAAC;MAADA,KAAC,GAADA,KAAC,CAADA,KAAC;IAAD;IAAP,OAAOA,KAAC;EAAkB;AACtC",
  "ignoreList": []
}"
`;

exports[`transform X() correctly > return 1`] = `
"import { Assert, Completion, AbruptCompletion, skipDebugger } from "#self";
function f() {
  let value;
  /* ReturnIfAbrupt */if (value instanceof Completion) {
    if (value instanceof AbruptCompletion) return value;
    value = value.Value;
  }
  return value;
}"
`;

exports[`transform X() correctly > return source map 1`] = `
"{
  "version": 3,
  "names": [
    "X"
  ],
  "sources": [
    "unknown"
  ],
  "sourcesContent": [
    "\\n    function f() {\\n      let value;\\n      return X(value);\\n    }\\n  "
  ],
  "mappings": ";AACI,SAAS,CAAC,GAAG;EACX,IAAI,KAAK;EACF,oBAAAA,EAAA,CAAAA,CAAE,KAAK,YAAPA,UAAC,EAADA;IAAAA,EAAA,CAAAA,CAAE,KAAK,YAAPA,gBAAC,EAADA,MAAA,CAAE,KAAK;IAAL,KAAK,GAAL,KAAK,CAAPA,KAAC;EAAD;EAAP,OAAS,KAAK;AAChB",
  "ignoreList": []
}"
`;

exports[`transform X() correctly > statement 1`] = `
"import { Assert, Completion, AbruptCompletion, skipDebugger } from "#self";
let value = 1;
/* ReturnIfAbrupt */if (value instanceof Completion) {
  if (value instanceof AbruptCompletion) return value;
  value = value.Value;
}"
`;

exports[`transform X() correctly > statement source map 1`] = `
"{
  "version": 3,
  "names": [
    "X"
  ],
  "sources": [
    "unknown"
  ],
  "sourcesContent": [
    "\\n    const value = 1;\\n    X(value);\\n  "
  ],
  "mappings": ";AACI,IAAM,KAAK,GAAG,CAAC;AACf,oBAAAA,EAAA,CAAAA,CAAE,KAAK,YAAPA,UAAC,EAADA;EAAAA,EAAA,CAAAA,CAAE,KAAK,YAAPA,gBAAC,EAADA,MAAA,CAAE,KAAK;EAAL,KAAK,GAAL,KAAK,CAAPA,KAAC;AAAD",
  "ignoreList": []
}"
`;

exports[`transform X() correctly > value 1`] = `
"import { Assert, Completion, AbruptCompletion, skipDebugger } from "#self";
let value;
/* ReturnIfAbrupt */if (value instanceof Completion) {
  if (value instanceof AbruptCompletion) return value;
  value = value.Value;
}
const x = value;"
`;

exports[`transform X() correctly > value source map 1`] = `
"{
  "version": 3,
  "names": [
    "X"
  ],
  "sources": [
    "unknown"
  ],
  "sourcesContent": [
    "\\n    let value;\\n    const x = X(value);\\n  "
  ],
  "mappings": ";AACI,IAAI,KAAK;AACC,oBAAAA,EAAA,CAAAA,CAAE,KAAK,YAAPA,UAAC,EAADA;EAAAA,EAAA,CAAAA,CAAE,KAAK,YAAPA,gBAAC,EAADA,MAAA,CAAE,KAAK;EAAL,KAAK,GAAL,KAAK,CAAPA,KAAC;AAAD;AAAV,MAAM,CAAC,GAAK,KAAM",
  "ignoreList": []
}"
`;

exports[`transform simple ternary > case 1`] = `
"import { AbruptCompletion, Completion, Assert } from "#self";
let value, error;
let x;
if (condition) {
  /* ReturnIfAbrupt */if (value instanceof Completion) {
    if (value instanceof AbruptCompletion) return value;
    value = value.Value;
  }
  x = value;
} else {
  x = error;
}"
`;

exports[`transform simple ternary > case source map 1`] = `
"{
  "version": 3,
  "names": [
    "Q"
  ],
  "sources": [
    "unknown"
  ],
  "sourcesContent": [
    "\\n    let value, error;\\n    const x = condition ? Q(value) : (error);\\n  "
  ],
  "mappings": ";AACI,IAAI,KAAK,EAAE,KAAK;AAAC;AAAA,IACP,SAAS;EAAG,oBAAAA,EAAA,CAAAA,CAAE,KAAK,YAAPA,UAAC,EAADA;IAAAA,EAAA,CAAAA,CAAE,KAAK,YAAPA,gBAAC,EAADA,MAAA,CAAE,KAAK;IAAL,KAAK,GAAL,KAAK,CAAPA,KAAC;EAAD;EAAhB,CAAC,GAAiB,KAAK;AAAA;EAAvB,CAAC,GAA2B,KAAK;AAAA",
  "ignoreList": []
}"
`;
